feat(docker): 完成 docker 代码沙箱的开发
1. 创建容器，把文件复制到容器内 - 执行代码，得到输出结果
2. 启动容器,执行代码
3. 收集整理输出结果
4. 删除容器,文件清理，释放空间